--- a/src/pages/category/Category.css
+++ b/src/pages/category/Category.css
@@ -21,61 +21,77 @@
   color: #6d6e76;
   width: 515px;
 }
-.categoryHero h3{
-    font-size: 16px;
-    font-weight: 600;
+.categoryHero h3 {
+  font-size: 16px;
+  font-weight: 600;
 }
-.mainContent .container{
-    display: flex;
-    padding: 128px 0;
-    gap: 72px;
+.mainContent .container {
+  display: flex;
+  padding: 128px 0;
+  gap: 102px;
 }
-.mainContent .blogPost{
-    gap: 32px;
+.mainContent .blogPost {
+  gap: 32px;
 }
-.mainContent .postText{
-    width: 400px;
+.mainContent .postText {
+  width: 400px;
 }
-.postText h2{
-    font-size: 30px;
+.postText h2 {
+  font-size: 30px;
 }
-.mainContent .postImg{
-    width: 300px;
+.mainContent .postImg {
+  width: 300px;
 }
-.mainContent .postImg img{
-    width: 100%;
+.mainContent .postImg img {
+  width: 100%;
 }
 .categories {
-    width: 380px;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
-.categoriesTitle{
-    font-size: 36px;
-    font-weight: 700;
-    padding: 30px 0;
+.categoriesTitle {
+  font-size: 36px;
+  font-weight: 700;
+  padding: 30px 0;
 }
-.oneCategory{
-    width: 100%;
+.categoryImg{
+    width: 58px;
+    height: 58px;
+    border-radius: 12px;
+    background-color: #FBF6EA;
     display: flex;
     align-items: center;
-    padding: 24px;
-    border: 1.5px solid #C1C1C3;
+    justify-content: center;
 }
-.allTags span{
-    border: 2px solid #6D6E76;
-    border-radius: 28px;
-    padding: 8px 28px;
+.oneCategory {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 24px;
+  gap: 24px;
+  border: 1.5px solid #c1c1c3;
 }
-.allTags span p{
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 32px;
-    color: #232536;
+.oneCategory:hover {
+  background-color: #FFD050;
 }
-.tags{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
+.oneCategory:hover .categoryImg {
+    background-color: white;
+  }
+.allTags span {
+  border: 2px solid #6d6e76;
+  border-radius: 28px;
+  padding: 8px 28px;
+}
+.allTags span p {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 32px;
+  color: #232536;
+}
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
 }
