--- a/src/pages/category/Category.css
+++ b/src/pages/category/Category.css
@@ -56,14 +56,14 @@
   font-weight: 700;
   padding: 30px 0;
 }
-.categoryImg{
-    width: 58px;
-    height: 58px;
-    border-radius: 12px;
-    background-color: #FBF6EA;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.categoryImg {
+  width: 58px;
+  height: 58px;
+  border-radius: 12px;
+  background-color: #fbf6ea;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .oneCategory {
   width: 100%;
@@ -73,12 +73,15 @@
   gap: 24px;
   border: 1.5px solid #c1c1c3;
 }
+.activeCategory {
+  background-color: #ffd050;
+}
 .oneCategory:hover {
-  background-color: #FFD050;
+  background-color: #ffd050;
 }
 .oneCategory:hover .categoryImg {
-    background-color: white;
-  }
+  background-color: white;
+}
 .allTags span {
   border: 2px solid #6d6e76;
   border-radius: 28px;
