--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -184,22 +184,14 @@
 .catagory:hover {
   background-color: #ffd050;
 }
-
-.icon,
-.icon2 {
+.icon {
   width: 48px;
   height: 48px;
   background-color: #fbf6ea;
-  border-radius: 5px;
-}
-
-.icon img {
-  width: 100%;
-}
-.icon2 img {
-  width: 60%;
-  margin-top: 8px;
-  margin-left: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 12px;
 }
 
 /* Styling section 3 */
